finished summary component and thank you message

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,16 @@
+:root {
+	--marine-blue: hsl(213, 96%, 18%);
+	--purple-blue: hsl(243, 100%, 62%);
+	--pastel-blue: hsl(228, 100%, 84%);
+	--light-blue: hsl(206, 94%, 87%);
+	--red: hsl(354, 84%, 57%);
+	--gray: hsl(231, 11%, 63%);
+	--light-gray: hsl(229, 24%, 87%);
+	--magnolia: hsl(217, 100%, 97%);
+	--alabaster: hsl(231, 100%, 99%);
+	--white: hsl(0, 0%, 100%);
+}
+
 *,
 *::before,
 *::after {
@@ -16,6 +29,8 @@ body {
 body {
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
+	font-family: "Ubuntu", sans-serif;
+	background-color: var(--magnolia);
 }
 
 img,
@@ -47,4 +62,11 @@ h6 {
 #root,
 #__next {
 	isolation: isolate;
+}
+
+.container {
+	position: absolute;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
