--- a/src/components/SignupForm/SignupForm.module.css
+++ b/src/components/SignupForm/SignupForm.module.css
@@ -42,3 +42,46 @@
 		color: var(--marine-blue);
 	}
 }
+
+.flexWrapper {
+	display: flex;
+	flex-direction: column;
+	padding-top: 24px;
+	gap: 16px;
+	min-width: 440px;
+}
+
+.flex {
+	display: flex;
+	justify-content: space-between;
+	padding: 10px 0;
+
+	&:first-of-type {
+		border-bottom: 1px solid var(--light-gray);
+	}
+}
+
+.flex span {
+	color: var(--marine-blue);
+}
+
+.container {
+	background-color: var(--magnolia);
+	padding: 10px 20px 20px;
+	border-radius: 8px;
+}
+
+.total {
+	padding-left: 20px;
+	padding-right: 20px;
+}
+
+.total span {
+	color: var(--purple-blue);
+	font-weight: 700;
+}
+
+.plan {
+	color: var(--marine-blue);
+	font-weight: 700;
+}
