--- a/src/components/StepOne/StepOne.module.css
+++ b/src/components/StepOne/StepOne.module.css
@@ -24,5 +24,6 @@
 	padding: 6px 10px;
 	border: 1px solid var(--light-gray);
 	border-radius: 6px;
-	color: var(--gray);
+	color: var(--marine-blue);
+	font-weight: 500;
 }
