updated mobile layout and styles

--- a/src/components/CheckGroup/CheckGroup.module.css
+++ b/src/components/CheckGroup/CheckGroup.module.css
@@ -49,3 +49,9 @@ input[type="checkbox"] {
 .price {
 	color: var(--purple-blue);
 }
+
+@media (max-width: 550px) {
+	.wrapper {
+		min-width: auto;
+	}
+}
