--- a/src/components/Card/Card.module.css
+++ b/src/components/Card/Card.module.css
@@ -7,3 +7,13 @@
 	display: flex;
 	justify-content: space-between;
 }
+
+@media (max-width: 550px) {
+	.wrapper {
+		width: auto;
+		height: auto;
+		margin-left: 16px;
+		margin-right: 16px;
+		display: block;
+	}
+}
