--- a/src/components/StepList/StepList.module.css
+++ b/src/components/StepList/StepList.module.css
@@ -3,6 +3,7 @@
 	height: 100%;
 	border-radius: 8px;
 	background-image: url("../../assets/images/bg-sidebar-desktop.svg");
+	background-position: center;
 	padding: 38px 30px;
 }
 
@@ -57,4 +58,25 @@
 	color: var(--marine-blue);
 	background-color: var(--light-blue);
 	border: none;
+}
+
+@media (max-width: 550px) {
+	.wrapper {
+		width: 100%;
+		height: 150px;
+		background-image: url("../../assets/images/bg-sidebar-mobile.svg");
+		background-repeat: no-repeat;
+		background-size: cover;
+		border-radius: 0;
+		margin-bottom: -50px;
+	}
+
+	.list {
+		flex-direction: row;
+		justify-content: center;
+	}
+
+	.itemContainer {
+		display: none;
+	}
 }
